tama improvements
